{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 260,
  "lineage": "ab841356-aedb-2c59-f7ea-033c5bceff93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "server1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0953476d60561c955",
            "arn": "arn:aws:ec2:us-east-1:284698404434:instance/i-06b7ee9413cc0bb9f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b7ee9413cc0bb9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Edisonw-lab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0baa79f9c9a384abe",
            "private_dns": "ip-10-10-0-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.115",
            "public_ip": "52.87.154.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "edison",
                  "project": "company",
                  "region": "us-east-1"
                },
                "tags_all": {
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "edison",
                  "project": "company",
                  "region": "us-east-1"
                },
                "throughput": 125,
                "volume_id": "vol-0e8bf7c15f8c6f316",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051094b399d26407a",
            "tags": {
              "Name": "server1-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "server1-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025d2ad7b0fbe1103"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:internet-gateway/igw-01782c40115a41182",
            "id": "igw-01782c40115a41182",
            "owner_id": "284698404434",
            "tags": {
              "Name": "igw vpc-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "igw vpc-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-00c6b3a11bbdaa4ae"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:route-table/rtb-034d4bee28266d91f",
            "id": "rtb-034d4bee28266d91f",
            "owner_id": "284698404434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01782c40115a41182",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public CRT-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "Public CRT-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c6b3a11bbdaa4ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05facff0b43269c6b",
            "route_table_id": "rtb-034d4bee28266d91f",
            "subnet_id": "subnet-051094b399d26407a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:security-group/sg-025d2ad7b0fbe1103",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [],
            "id": "sg-025d2ad7b0fbe1103",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "284698404434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-public-instance-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "sg-public-instance-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c6b3a11bbdaa4ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:subnet/subnet-0a88caa4839a16553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88caa4839a16553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284698404434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "subnet-private-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-00c6b3a11bbdaa4ae"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:subnet/subnet-051094b399d26407a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051094b399d26407a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284698404434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "subnet-public-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-00c6b3a11bbdaa4ae"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:vpc/vpc-00c6b3a11bbdaa4ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ba478fb378bac641",
            "default_route_table_id": "rtb-013c5c94bdc20d5ed",
            "default_security_group_id": "sg-0e1e04bccbbce3875",
            "dhcp_options_id": "dopt-0490c64d3862b4d90",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c6b3a11bbdaa4ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013c5c94bdc20d5ed",
            "owner_id": "284698404434",
            "tags": {
              "Name": "VPC-Virginia-company-dev-us-east-1"
            },
            "tags_all": {
              "Name": "VPC-Virginia-company-dev-us-east-1",
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_public_instance_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284698404434:security-group-rule/sgr-0b869649e37ef3804",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b869649e37ef3804",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-025d2ad7b0fbe1103",
            "security_group_rule_id": "sgr-0b869649e37ef3804",
            "tags": null,
            "tags_all": {
              "cloud": "aws",
              "env": "dev",
              "owner": "edison",
              "project": "company",
              "region": "us-east-1"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    }
  ]
}